Bug 439356 - ksmserver-logout-greeter is dying with an SIGSEGV when it is called (under X11)
Summary: ksmserver-logout-greeter is dying with an SIGSEGV when it is called (under X11)
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.22.2
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 439473 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-01 06:10 UTC by Christian Groove
Modified: 2021-07-05 07:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Groove 2021-07-01 06:10:09 UTC
SUMMARY
In X11 mode i logged in KDE and when i decide to logout or reboot
i use the very standard way calling the main-menu and
called logout. (Wayland does not have theses problems, it has other ;-( )

The expected dialog logout-greeter did not appear as expected
and a message informed me, that this application crashed.

Linux-Distro: Fedora FC34 (updated)
Running in X11 (not Wayland)
Hardware:     old i7-3xxxx system with an RadeonHD8830M card and 3 attached 4k monitors

Affected Package: plasma-workspace-5.22.2.1-1.fc34

STEPS TO REPRODUCE
1. Login using the X11 driver
2. Call logout and wait a bit
3. a crash note is beeing shown, that your ksmserver-logout-greeter received a SEGV


OBSERVED RESULT
a segv indication is shown.

EXPECTED RESULT
a shown logout-greeter page

SOFTWARE/OS VERSIONS
Windows: ugh
macOS: bah 
Linux/KDE Fedora F34, shipped with KDE/Plasma system (no changes) 
(available in About System)
KDE Plasma Version: 5.22.2.1-1.fc34.x86_64
KDE Frameworks Version: kdelibs-common-4.14.38-26.fc34.x86_64
Qt Version: qt-4.8.7-60.fc34.x86_64,qt5-qtx11extras-5.15.2-3.fc34

ADDITIONAL INFORMATION
see https://bugzilla.redhat.com/show_bug.cgi?id=1976612

reporter:       libreport-2.15.2
backtrace_rating: 4
cgroup:         0::/user.slice/user-1002.slice/user@1002.service/app.slice/app-\x2fusr\x2flibexec\x2fksmserver\x2dlogout\x2dgreeter-69e5e3a9eda946e88abc3141de712e32.scope
cmdline:        /usr/libexec/ksmserver-logout-greeter
crash_function: __cxxabiv1::__dynamic_cast
executable:     /usr/libexec/ksmserver-logout-greeter
journald_cursor: s=cec56d65e160480bacbe1de5e0423ad4;i=6757c;b=ec068e6ef8334c7b85c422b0034e23c1;m=e277776a;t=5c5bfcda86036;x=621a359a128028dd
kernel:         5.12.12-300.fc34.x86_64
rootdir:        /
runlevel:       N 5
type:           CCpp
uid:            1002

Truncated backtrace:
Thread no. 1 (10 frames)
 #0 __cxxabiv1::__dynamic_cast at ../../../../libstdc++-v3/libsupc++/dyncast.cc:71
 #1 LayerShellQt::WindowPrivate::getSurface at /usr/src/debug/layer-shell-qt-5.22.2.1-1.fc34.x86_64/src/interfaces/window.cpp:137
 #2 LayerShellQt::Window::setKeyboardInteractivity at /usr/src/debug/layer-shell-qt-5.22.2.1-1.fc34.x86_64/src/interfaces/window.cpp:82
 #3 KSMShutdownDlg::init at /usr/src/debug/plasma-workspace-5.22.2.1-1.fc34.x86_64/logout-greeter/shutdowndlg.cpp:213
 #4 Greeter::adoptScreen at /usr/src/debug/plasma-workspace-5.22.2.1-1.fc34.x86_64/logout-greeter/greeter.cpp:90
 #5 Greeter::init at /usr/src/debug/plasma-workspace-5.22.2.1-1.fc34.x86_64/logout-greeter/greeter.cpp:67
 #6 LogoutPromptAdaptor::qt_metacall at /usr/src/debug/plasma-workspace-5.22.2.1-1.fc34.x86_64/x86_64-redhat-linux-gnu/logout-greeter/logoutpromptadaptor.moc:130
 #7 QDBusConnectionPrivate::deliverCall at ../../include/QtCore/../../src/corelib/tools/qvarlengtharray.h:201
 #8 QDBusConnectionPrivate::activateCall at qdbusintegrator.cpp:904
 #10 QDBusConnectionPrivate::activateObject at qdbusintegrator.cpp:1497
Comment 1 Bug Janitor Service 2021-07-01 07:15:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/954
Comment 2 David Redondo 2021-07-01 09:31:05 UTC
Git commit 211897b07a83a4e5c3b32b1f14fd710375a16240 by David Redondo.
Committed on 01/07/2021 at 07:08.
Pushed by davidre into branch 'master'.

Guard calls into layer shell

LayerShellQt::Window::get always returns a Window, ensure we only
do it on Wayland.
FIXED-IN:5.22.3

M  +6    -4    logout-greeter/shutdowndlg.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/211897b07a83a4e5c3b32b1f14fd710375a16240
Comment 3 David Redondo 2021-07-01 09:31:51 UTC
Git commit 6a5015951f9899e625bf8572f20cffc64d7aea33 by David Redondo.
Committed on 01/07/2021 at 09:31.
Pushed by davidre into branch 'Plasma/5.22'.

Guard calls into layer shell

LayerShellQt::Window::get always returns a Window, ensure we only
do it on Wayland.
FIXED-IN:5.22.3


(cherry picked from commit 211897b07a83a4e5c3b32b1f14fd710375a16240)

M  +6    -4    logout-greeter/shutdowndlg.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6a5015951f9899e625bf8572f20cffc64d7aea33
Comment 4 David Redondo 2021-07-05 07:09:17 UTC
*** Bug 439473 has been marked as a duplicate of this bug. ***