Guard calls into layer shell

LayerShellQt::Window::get always returns a Window, ensure we only
do it on Wayland.
BUG:439356
FIXED-IN:5.22.3